--- a/dataset.qmd
+++ b/dataset.qmd
@@ -189,7 +189,7 @@ se <- SummarizedExperiment(
       grepl("exp", sample_id) ~ TRUE, # exp for experimental purtebation
       any(grepl("exp", sample_id)) ~ FALSE, # all other items in group are false
       TRUE ~ NA # everything else should be NA
-    ))
+      ))
   ) |>
   ungroup()
 # se
@@ -208,6 +208,41 @@ donor |> pull(cols(tissue)) |> table()
 
 ```
 
+```{r more-meta-data}
+#| eval: false
+# `%|E|%` <- function(e1, e2) if (rlang::is_empty(e1)) e2 else e1 
+# se |>
+#   mutate(
+#     cols(
+#       .string = stringr::str_match_all(
+#         sample_id, "(GTEX-[^-]+)-([^-]+-?.*)-SM-(.*)"
+#       ),
+#       tissue_id = purrr::map_chr(.string, ~ .x[,3] %|E|% NA_character_),
+#       rep_id = purrr::map_chr(.string,  ~ .x[,4] %|E|% NA_character_),
+#       tech_id = stringr::str_extract(rep_id, "_.*") |> stringr::str_remove("^_"),
+#       rep_id = stringr::str_remove(rep_id, "_.*")
+#     )
+#   ) |>
+#   colData() |>
+#   as_tibble() |>
+#   select(sample_id, sample_name, tissue_id, rep_id, tech_id, tissue) |>
+#   distinct(sample_name, tissue_id, tissue) |>
+#   arrange(tissue_id, sample_name) |>
+#   readr::write_csv(file = "data/tissue_meta_map.csv")
+# 
+# se(se) |> rowRanges() |> {
+#     \(x) {
+#         tibble(
+#             gene_id = x$gene_id,
+#             start = start(x),
+#             end = end(x),
+#             seqnames = as.character(seqnames(x)),
+#             strand = as.character(strand(x))
+#         )
+#     }
+# }() |> readr::write_csv(file = "data/ranges_meta_map.csv")
+```
+
 
 ```{r quantify_tss}
 se <- plyxp(se,
@@ -221,28 +256,142 @@ se <- plyxp(se,
 se2 <- mutate(
   se,
   rows(
-    new_transcript = is_hash(transcript_id)
+    new_transcript = is_hash(transcript_id),
+    has_ensbl_parent = grepl("^ENSG", gene_id)
   )) |>
-  group_by(rows(.start, .seqnames = as.character(.seqnames))) |>
-  summarise(rows(
+  group_by(rows(.start, .seqnames = as.character(.seqnames))) 
+rr <-  se2 |> {
+    function(se) {
+      row_groups <- group_data(se)$row_groups
+      groups <- vctrs::list_unchop(
+        as.list(row_groups$.indices_group_id),
+        indices = row_groups$.indices)
+      rr <- rowRanges(se(se))
+      mcols(rr) <- NULL
+      mcols(rr)$.exons <- rowData(se)$exons
+      split(rr, groups)
+    }
+  }()
+se2 <- se2 |> summarise(rows(
     n = n(),
-    n_new = sum(new_transcript),
-    n_old = n - n_new
+    n_novel = sum(!has_ensbl_parent & new_transcript),
+    n_novel_ensbl = sum(has_ensbl_parent & new_transcript),
+    n_not_novel = sum(!new_transcript),
+    across(c(gene_id, transcript_id), list)
   ),
   counts = list(counts))
-
+rowData(se2)$.ranges <- rr
 se2 <- ungroup(se2) |>
   mutate(
     rows(
-      type = case_when(
-        n_new == 0 ~ "old",
-        n_old == 0 ~ "new",
-        TRUE ~ "mix"
-      )
+      # similar to file permissions,
+      # 1 -> novel: contains transcript with no associated gene parent and has hash
+      # 2 -> ensbl novel: contains transcript with associated gene parent and has hash
+      # 4 -> not novel: contains transcript that has no hash (assumed to have a genee parent)
+      encode_type = (n_novel>0) + (2 * (n_novel_ensbl>0)) + (4 * (n_not_novel>0))
     )
   )
 
-pull(se2, rows(type)) |> table()
+
+saveRDS(se(se2), box::file("data/longRead.rds"))
+
+pull(se2, rows(encode_type)) |> table()
 ```
 
+```{r}
+# rr <- rowRanges(se(se))
+se_small <- readRDS(box::file("data/bulk_RNAseq_small.rds"))
+# rr_small <- rowRanges(se_small)
+# rr_split <- split(rr, rr$gene_id)
+# rr_sml_split <- split(rr_small, rr_small$gene_id)
+# same_names <- names(rr_sml_split)[names(rr_sml_split) %in% names(rr_split)]
+# 
+# rr_split <- rr_split[same_names]
+# rr_sml_split <- rr_sml_split[same_names]
+# .common_trans <- intersect(rr$transcript_id, rr_small$transcript_id)
+# long_rr_trans <- slice(rr, match(.common_trans, transcript_id))
+# short_rr_trans <- slice(rr_small, match(.common_trans, transcript_id)) 
+```
+
+```{r}
+.common_trans <- intersect(
+  rowData(se)$transcript_id,
+  rowData(se_small)$transcript_id
+)
+se_long <- se[match(.common_trans, rowData(se)$transcript_id),] |>
+  mutate(cols(seq_source = "long_read"))
+se_short <- se_small[match(.common_trans, rowData(se_small)$transcript_id),] |>
+  new_plyxp() |>
+  mutate(cols(seq_source = "short_read"),
+         counts = as.integer(round(rsem)))
+# assume x, y have same row info
+merge_cols <- function(x, y, ...) {
+  # browser()
+  quos <- plyxp:::plyxp_quos(..., .named = F, .ctx_default = "assays",
+                             .ctx_opt = "cols")
+  quos <- split(lapply(quos, rlang::quo_get_expr),
+                vapply(quos, attr, "plyxp:::ctx", FUN.VALUE = ""))
+  
+  x <- select(x, !!!quos[["assays"]], rows(everything()),
+              cols(!!!quos[["cols"]]))
+  y <- select(y, !!!quos[["assays"]], cols(!!!quos[["cols"]])) |>
+    plyxp(\(y, x) {
+      rowRanges(y) <- rowRanges(x)
+      y
+    }, x = se(x))
+  
+  se <- cbind(
+    se(x), se(y)
+  )
+  new_plyxp(se)
+}
+merged_se <- merge_cols(se_long, se_short, counts,
+                        cols(sample_name, tissue, seq_source))
+
+apply_by <- function(..., .fun, .by, .args = NULL) {
+  # browser()
+  
+  .l <- rlang::dots_list(...) 
+  .l <- vctrs::vec_recycle_common(!!!.l)
+  .l <- lapply(.l, split, .by)
+  .fun <- rlang::as_function(.fun)
+  purrr::map(
+    seq_along(.l[[1]]),
+    \(.i, l, .fun, .args) {
+      .l <- lapply(l, `[[`, .i)
+      rlang::exec(.f = .fun, !!!.l, !!!.args)
+    },
+    l = .l,
+    .fun = .fun,
+    .args = .args
+  )
+}
+apply_by(1:4, .f = sum, .by = c(1,1,2,2))
+merged_se |>
+  mutate(
+    cols(
+      total = colSums(.assays_asis$counts),
+      scaleFactor = total/1e6
+    ),
+    scaled = counts / .cols$scaleFactor,
+    large = scaled > 1
+  ) |>
+  filter(
+    rows(
+      #find genes that have "large" counts in both 'long' and
+      # 'short' reads
+      purrr::map_lgl(
+        .assays$large,
+        ~ rlang::exec(all, !!!apply_by(.x, .fun = any, .by = .cols_asis$seq_source)))))
+        # .f = apply_by,
+        # .by = .cols_asis$seq_source,
+        # .fun = ~ any(.x)) |>
+        # purrr::map_lgl(~ rlang::exec(all, !!!.x))
+  #   )
+  # )
+  
+
+
+  
+```
 
