--- a/README.qmd
+++ b/README.qmd
@@ -41,12 +41,15 @@ datasets$se_short
 
 ### datasets annotations
 
-Please see [`analysis/datasets.R`] as most values exported are annotated there.
+Please see 
+[`analysis/datasets.R`](https://github.com/jtlandis/BCB784-proj/blob/justin-dev/analysis/datasets.R)
+as most values exported are annotated there.
 
 ### Subsetting short read Samples
 
-Please see [`data/filter_short_read_bulk_RNAseq.R`] for source code on subsetting
-large rna-seq samples.
+Please see 
+[`data/filter_short_read_bulk_RNAseq.R`](https://github.com/jtlandis/BCB784-proj/blob/justin-dev/data/filter_short_read_bulk_RNAseq.R)
+for source code on subsetting large rna-seq samples.
 
 ## Data Summary
 
@@ -56,6 +59,34 @@ being version 8 and version 10. Given that the
 stated they used Gencode Version 26, we opted to use GTEX version 8. The long
 read data only has one GTEX version available, version 9, which is not annotated
 as to which Gencode version was used.
+
+### Gencode Issues
+
+```{r}
+long_trans <- rowData(datasets$se_long)$transcript_id
+short_trans <- rowData(datasets$se_short)$transcript_id
+common_trans <- intersect(long_trans, short_trans)
+
+match_trans <- function(se, trans) {
+  rr <- rowRanges(se)[match(common_trans, trans)]
+  id <- rr$transcript_id
+  mcols(rr) <- NULL
+  mcols(rr)$id <- id
+  rr
+}
+
+rr_long <- match_trans(se(datasets$se_long), long_trans)
+rr_short <- match_trans(se(datasets$se_short), short_trans)
+
+#confirm all transcript ids are identical
+# sanity check
+all(identical(rr_long$id, rr_short$id))
+
+# only ~2,500 transcripts of the ~19,000 are identical
+table(ranges(rr_long)==ranges(rr_short))
+
+```
+
 
 ## Figure Reproduction
 
